Fix spacing in nav bar on mobile

--- a/themes/cactus/assets/scss/partial/header.scss
+++ b/themes/cactus/assets/scss/partial/header.scss
@@ -117,7 +117,6 @@
     }
     li:not(:first-child) {
       padding-top: 1rem;
-      padding-left: $logo-width + 20px;
       font-size: 1rem;
     }
   }
